[perf] Fix point-links useful links not showing without commit-range-sk
Bug: 408222109
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/974500
Commit-Queue: Tony Seaward <seawardt@google.com>

--- a/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
+++ b/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
@@ -123,6 +123,7 @@ chart-tooltip-sk {
       display: table-cell;
       text-align: left;
       padding-right: 1em;
+      max-width: 200px;
     }
   }
 }
